# SuperTucanoEngine

./: .gitignore  CMakeLists.txt  ENGINE_CONTEXT.md  README.md
SandboxApp/: CMakeLists.txt
SandboxApp/assets/shaders/: aerial_perspective_lut.comp  atmosphere_common.glsl  basic_3d.frag  basic_3d.vert  multiscat_lut.comp  pbr.frag  pbr.vert  sky.frag  sky.vert  skyview_lut.comp  transmittance_lut.comp
SandboxApp/src/: main.cpp
TucanoCore/: CMakeLists.txt
TucanoCore/include/Tucano/Asset/: ModelLoader.h
TucanoCore/include/Tucano/Camera/: Camera.h  FPSCameraController.h
TucanoCore/include/Tucano/Core/: Assert.h  Input.h  Logger.h  Window.h
TucanoCore/include/Tucano/ECS/: Components.h
TucanoCore/include/Tucano/Math/: Transform.h
TucanoCore/include/Tucano/Mesh/: Mesh.h
TucanoCore/include/Tucano/Render/: Atmosphere.h  Material.h  Renderer.h  ShaderCompiler.h  Texture2D.h  VulkanContext.h
TucanoCore/include/Tucano/World/: RenderableObject.h  World.h
TucanoCore/src/Asset/: ModelLoader.cpp
TucanoCore/src/Camera/: Camera.cpp  FPSCameraController.cpp
TucanoCore/src/Core/: Input.cpp  Logger.cpp  Window.cpp
TucanoCore/src/Mesh/: Mesh.cpp
TucanoCore/src/Render/: Material.cpp  Renderer.cpp  ShaderCompiler.cpp  Texture2D.cpp  VulkanContext.cpp
TucanoCore/src/World/: World.cpp
docs/: RENDER_GRAPH_DESIGN.md
